--- a/src/app/shares/shares-account-actions/undo-approval-shares-account/undo-approval-shares-account.component.html
+++ b/src/app/shares/shares-account-actions/undo-approval-shares-account/undo-approval-shares-account.component.html
@@ -9,7 +9,7 @@
         <div>
 
           <p class="mat-typography confirm-text">
-            Are you sure you want to undo approval of shares account with ID: {{accountId}} ?
+            {{'Shares.Actions.UndoApprovalSharesAccount.ask'| translate}}{{accountId}} ?
           </p>
 
         </div>
@@ -17,8 +17,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="warn">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="warn">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
