--- a/src/app/shares/shares-account-actions/activate-shares-account/activate-shares-account.component.html
+++ b/src/app/shares/shares-account-actions/activate-shares-account/activate-shares-account.component.html
@@ -7,20 +7,20 @@
       <mat-card-content>
 
           <mat-form-field fxFlex>
-            <mat-label>Activated On Date</mat-label>
+            <mat-label>{{'Shares.Actions.ActivateShares.activatedDate'| translate}}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="activatedDatePicker" required formControlName="activatedDate">
             <mat-datepicker-toggle matSuffix [for]="activatedDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #activatedDatePicker></mat-datepicker>
             <mat-error *ngIf="activateSharesAccountForm.controls.activatedDate.hasError('required')">
-              Activated On Date is <strong>required</strong>
+              {{'Shares.Actions.ActivateShares.erractivatedDate'| translate}}<strong>{{'Shares.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="accent" [disabled]="!activateSharesAccountForm.valid">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="accent" [disabled]="!activateSharesAccountForm.valid">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
