--- a/src/app/shares/shares-account-actions/apply-shares/apply-shares.component.html
+++ b/src/app/shares/shares-account-actions/apply-shares/apply-shares.component.html
@@ -9,25 +9,25 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Request Date</mat-label>
+            <mat-label>{{'Shares.Actions.ApplyShares.requestedDate'| translate}}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="requestedDatePicker" required formControlName="requestedDate">
             <mat-datepicker-toggle matSuffix [for]="requestedDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #requestedDatePicker></mat-datepicker>
             <mat-error *ngIf="applySharesForm.controls.requestedDate.hasError('required')">
-              Request Date is <strong>required</strong>
+              {{'Shares.Actions.ApplyShares.errrequestedDate'| translate}}<strong>{{'Shares.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Total No. of Shares</mat-label>
+            <mat-label>{{'Shares.Actions.ApplyShares.requestedShares'| translate}}</mat-label>
             <input matInput required formControlName="requestedShares">
             <mat-error *ngIf="applySharesForm.controls.requestedShares.hasError('required')">
-              Requested Shares is <strong>required</strong>
+              {{'Shares.Actions.ApplyShares.errrequestedShares'| translate}}<strong>{{'Shares.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Today's Price</mat-label>
+            <mat-label>{{'Shares.Actions.ApplyShares.unitPrice'| translate}}</mat-label>
             <input matInput required formControlName="unitPrice">
           </mat-form-field>
 
@@ -36,8 +36,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="accent" [disabled]="!applySharesForm.valid">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="accent" [disabled]="!applySharesForm.valid">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
