--- a/src/app/shares/shares-account-actions/approve-shares/approve-share-dialog/approve-share-dialog.component.html
+++ b/src/app/shares/shares-account-actions/approve-shares/approve-share-dialog/approve-share-dialog.component.html
@@ -1,8 +1,8 @@
-<h1 mat-dialog-title>Approve Share</h1>
+<h1 mat-dialog-title>{{'Shares.Actions.ApproveShares.ApproveSharesDialog.content'| translate}}</h1>
 <div mat-dialog-content>
-  <p>Are you sure you want to approve share with id: {{ data.shareId }} ?</p>
+  <p>{{ data.shareId }} ?</p>
 </div>
 <mat-dialog-actions align="end">
-  <button mat-raised-button mat-dialog-close>Cancel</button>
-  <button mat-raised-button color="accent" [mat-dialog-close]="{ approve: true }">Confirm</button>
+  <button mat-raised-button mat-dialog-close>{{ "ShareButton.CancelEng" | translate }}</button>
+  <button mat-raised-button color="accent" [mat-dialog-close]="{ approve: true }">{{ "ShareButton.ConfirmEng" | translate }}</button>
 </mat-dialog-actions>
