--- a/src/app/shares/shares-account-actions/approve-shares/approve-shares.component.html
+++ b/src/app/shares/shares-account-actions/approve-shares/approve-shares.component.html
@@ -5,29 +5,29 @@
     <table #sharesTable mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="transactionDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Transaction Date </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Shares.Actions.ApproveShares.transactionDate'| translate}} </th>
         <td mat-cell *matCellDef="let share"> {{ share.purchasedDate | date }}</td>
       </ng-container>
 
       <ng-container matColumnDef="totalShares">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Total Shares </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Shares.Actions.ApproveShares.totalShares'| translate}} </th>
         <td mat-cell *matCellDef="let share"> {{ share.numberOfShares }} </td>
       </ng-container>
 
       <ng-container matColumnDef="redeemedPrice">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Purchased/Redeemed Price </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Shares.Actions.ApproveShares.redeemedPrice'| translate}} </th>
         <td mat-cell *matCellDef="let share"> {{ share.purchasedPrice }} </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> Status </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Shares.Actions.ApproveShares.Status'| translate}} </th>
         <td mat-cell *matCellDef="let share">
           <i class="fa fa-stop" [ngClass]="share.status.code|statusLookup" [matTooltip]="share.status.value"></i>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="approve">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Confirm Approve </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Shares.Actions.ApproveShares.approve'| translate}} </th>
         <td mat-cell *matCellDef="let share">
           <button class="share-action-button" mat-raised-button color="accent" matTooltip="Approve Share"
             (click)="approve(share.id)">
