--- a/src/app/shares/shares-account-actions/close-shares-account/close-shares-account.component.html
+++ b/src/app/shares/shares-account-actions/close-shares-account/close-shares-account.component.html
@@ -9,17 +9,17 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Closed On Date</mat-label>
+            <mat-label>{{'Shares.Actions.CloseShares.closedDate'| translate}}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="closedDatePicker" required formControlName="closedDate">
             <mat-datepicker-toggle matSuffix [for]="closedDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #closedDatePicker></mat-datepicker>
             <mat-error *ngIf="closeSharesAccountForm.controls.closedDate.hasError('required')">
-              Closed On Date is <strong>required</strong>
+              {{'Shares.Actions.CloseShares.errclosedDate'| translate}}<strong>{{'Shares.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Note</mat-label>
+            <mat-label>{{'Shares.Actions.CloseShares.Note'| translate}}</mat-label>
             <textarea matInput formControlName="note"></textarea>
           </mat-form-field>
 
@@ -28,8 +28,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="warn" [disabled]="!closeSharesAccountForm.valid">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="warn" [disabled]="!closeSharesAccountForm.valid">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
