--- a/src/app/shares/shares-account-actions/reject-shares/reject-share-dialog/reject-share-dialog.component.html
+++ b/src/app/shares/shares-account-actions/reject-shares/reject-share-dialog/reject-share-dialog.component.html
@@ -1,8 +1,8 @@
-<h1 mat-dialog-title>Reject Share</h1>
+<h1 mat-dialog-title>{{'Shares.Actions.RejectShares.RejectSharesDialog.title'| translate}}</h1>
 <div mat-dialog-content>
-  <p>Are you sure you want to reject share with id: {{ data.shareId }} ?</p>
+  <p>{{'Shares.Actions.RejectShares.content'| translate}}{{ data.shareId }} ?</p>
 </div>
 <mat-dialog-actions align="end">
-  <button mat-raised-button mat-dialog-close>Cancel</button>
-  <button mat-raised-button color="warn" [mat-dialog-close]="{ reject: true }">Confirm</button>
+  <button mat-raised-button mat-dialog-close>{{ "ShareButton.CancelEng" | translate }}</button>
+  <button mat-raised-button color="warn" [mat-dialog-close]="{ reject: true }">{{ "ShareButton.ConfirmEng" | translate }}</button>
 </mat-dialog-actions>
