--- a/src/app/shares/shares-account-stepper/shares-account-terms-step/shares-account-terms-step.component.html
+++ b/src/app/shares/shares-account-stepper/shares-account-terms-step/shares-account-terms-step.component.html
@@ -3,64 +3,64 @@
   <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" fxLayoutAlign.gt-sm="start center">
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Currency</mat-label>
+      <mat-label>{{'Shares.Stepper.SharesAccountTerms.Currency'| translate}}</mat-label>
       <input matInput formControlName="currencyCode">
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Decimal Places</mat-label>
+      <mat-label>{{'Shares.Stepper.SharesAccountTerms.decimal'| translate}}</mat-label>
       <input type="number" matInput formControlName="decimal">
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Total Number of Shares</mat-label>
+      <mat-label>{{'Shares.Stepper.SharesAccountTerms.requestedShares'| translate}}</mat-label>
       <input type="number" matInput formControlName="requestedShares" required>
       <mat-error>
-        Total Number of Shares is <strong>required</strong>
+        {{'Shares.Stepper.SharesAccountTerms.errrequestedShares'| translate}}<strong>{{'Shares.strongRequired'| translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Today's Price</mat-label>
+      <mat-label>{{'Shares.Stepper.SharesAccountTerms.unitPrice'| translate}}</mat-label>
       <input type="number" matInput formControlName="unitPrice">
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Currency in multiples of</mat-label>
+      <mat-label>{{'Shares.Stepper.SharesAccountTerms.currencyMultiple'| translate}}</mat-label>
       <input type="number" matInput formControlName="currencyMultiple" >
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Default Savings Account</mat-label>
+      <mat-label>{{'Shares.Stepper.SharesAccountTerms.savingsAccount'| translate}}</mat-label>
       <mat-select formControlName="savingsAccountId" required>
         <mat-option *ngFor="let account of savingsAccountsData" [value]="account.id">
           {{ account.accountNo }}
         </mat-option>
       </mat-select>
       <mat-error>
-        Default Savings Account is <strong>required</strong>
+        {{'Shares.Stepper.SharesAccountTerms.errsavingsAccount'| translate}}<strong>{{'Shares.strongRequired'| translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Application Date</mat-label>
-      <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="applicationDatePicker" 
+      <mat-label>{{'Shares.Stepper.SharesAccountTerms.applicationDate'| translate}}</mat-label>
+      <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="applicationDatePicker"
         formControlName="applicationDate" required>
       <mat-datepicker-toggle matSuffix [for]="applicationDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #applicationDatePicker></mat-datepicker>
       <mat-error>
-        Application Date is <strong>required</strong>
+        {{'Shares.Stepper.SharesAccountTerms.errapplicationDate'| translate}}<strong>{{'Shares.strongRequired'| translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-checkbox labelPosition="before" formControlName="allowDividendCalculationForInactiveClients" fxFlex="48%">
-      Allow dividends for inactive clients
+      {{'Shares.Stepper.SharesAccountTerms.allowDividendCalculationForInactiveClients'| translate}}
     </mat-checkbox>
 
-    <h4 fxFlex="98%" class="mat-h4">Minimum Active Period</h4>
+    <h4 fxFlex="98%" class="mat-h4">{{'Shares.Stepper.SharesAccountTerms.MinimumActivePeriod'| translate}}</h4>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Frequency</mat-label>
+      <mat-label>{{'Shares.Stepper.SharesAccountTerms.Frequency'| translate}}</mat-label>
       <input type="number" matInput formControlName="minimumActivePeriod">
     </mat-form-field>
 
@@ -73,15 +73,15 @@
       </mat-select>
     </mat-form-field>
 
-    <h4 fxFlex="98%" class="mat-h4">Lock-in Period</h4>
+    <h4 fxFlex="98%" class="mat-h4">{{'Shares.Stepper.SharesAccountTerms.LockInPeriod'| translate}}</h4>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Frequency</mat-label>
+      <mat-label>{{'Shares.Stepper.SharesAccountTerms.Frequency'| translate}}</mat-label>
       <input type="number" matInput formControlName="lockinPeriodFrequency">
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Type</mat-label>
+      <mat-label>{{'Shares.Stepper.SharesAccountTerms.Type'| translate}}</mat-label>
       <mat-select formControlName="lockinPeriodFrequencyType">
         <mat-option *ngFor="let lockinPeriodFrequencyType of lockinPeriodFrequencyTypeData" [value]="lockinPeriodFrequencyType.id">
           {{ lockinPeriodFrequencyType.value }}
@@ -94,10 +94,10 @@
   <div fxLayout="row" class="margin-t" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
     <button mat-raised-button matStepperPrevious disabled>
       <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
-      Previous
+      {{ "ShareButton.PreviousEng" | translate }}
     </button>
     <button mat-raised-button matStepperNext>
-      Next&nbsp;&nbsp;
+      {{ "ShareButton.NextEng" | translate }}&nbsp;&nbsp;
       <fa-icon icon="arrow-right"></fa-icon>
     </button>
   </div>
