--- a/src/app/shares/shares-account-view/dividends-tab/dividends-tab.component.html
+++ b/src/app/shares/shares-account-view/dividends-tab/dividends-tab.component.html
@@ -9,22 +9,22 @@
     <table mat-table [dataSource]="dataSource" >
 
       <ng-container matColumnDef="transactionDate">
-        <th mat-header-cell *matHeaderCellDef> Transaction Date </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Shares.View.DividendsTab.transactionDate'| translate}} </th>
         <td mat-cell *matCellDef="let dividend"> {{dividend.postedDate | date}} </td>
       </ng-container>
 
       <ng-container matColumnDef="amount">
-        <th mat-header-cell *matHeaderCellDef> Amount </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Shares.View.DividendsTab.Amount'| translate}} </th>
         <td mat-cell *matCellDef="let dividend"> {{shareAccountData.currency.displaySymbol}}&nbsp;{{dividend.amount | money}} </td>
       </ng-container>
 
       <ng-container matColumnDef="transactionReference">
-        <th mat-header-cell *matHeaderCellDef> Transaction Reference </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Shares.View.DividendsTab.transactionReference'| translate}} </th>
         <td mat-cell *matCellDef="let dividend"> {{dividend.savingsTransactionId}} </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> status </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Shares.View.DividendsTab.status'| translate}} </th>
         <td mat-cell *matCellDef="let dividend"> {{dividend.status.value}} </td>
       </ng-container>
 
